--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@vusion/webfonts-generator",
-  "version": "0.8.0",
+  "name": "@jegorovedgar/webfonts-generator",
+  "version": "0.8.1",
   "description": "Generator of webfonts from svg icons",
   "main": "src/index.js",
   "directories": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vusion/webfonts-generator"
+    "url": "https://github.com/jegorovedgar/webfonts-generator"
   },
   "keywords": [
     "font",
@@ -21,27 +21,26 @@
     "woff",
     "woff2"
   ],
-  "author": "moujintao <moujintaotest@163.com>",
+  "author": "jegorovedgar <jegorov.e@gmail.com>",
   "license": "Unlicense",
   "bugs": {
-    "url": "https://github.com/vusion/webfonts-generator/issues"
+    "url": "https://github.com/jegorovedgar/webfonts-generator/issues"
   },
   "dependencies": {
-    "handlebars": "^4.0.11",
-    "mkdirp": "^1.0.4",
-    "q": "^1.1.2",
+    "handlebars": "^4.7.8",
+    "q": "^1.5.1",
     "svg2ttf": "^6.0.3",
-    "svgicons2svgfont": "^10.0.4",
-    "ttf2eot": "^3.0.0",
+    "svgicons2svgfont": "^12.0.0",
+    "ttf2eot": "^3.1.0",
     "ttf2woff": "^3.0.0",
-    "ttf2woff2": "^4.0.4",
-    "underscore": "^1.9.1",
+    "ttf2woff2": "^5.0.0",
+    "underscore": "^1.13.6",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
     "file-type": "^16.1.0",
-    "mocha": "^8.2.1",
-    "node-sass": "^6.0.1",
+    "mocha": "^10.2.0",
+    "node-sass": "^9.0.0",
     "read-chunk": "^3.2.0"
   }
 }
